methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:4: error: not found: value estFAceMur
  while(estFAceMur()){
        ^